Hulpvraag/hulpbehoevende schermen + vrijwilliger toevoegingen

--- a/CarespotASP/Views/Vrijwilliger/Hoofdscherm.cshtml
+++ b/CarespotASP/Views/Vrijwilliger/Hoofdscherm.cshtml
@@ -31,7 +31,7 @@
                         <td>@hulpvraag.Titel</td>
                         <td>@hulpvraag.CreateDatum</td>
                         <td>
-                            <form action="" method="GET">
+                            <form action="/Hulpvraag/Details/@hulpvraag.Id" method="GET">
                                 <button type="submit" class="btn btn-primary">Open</button>
                             </form>
                         </td>
