--- a/CarespotASP/Views/Vrijwilliger/OpdrachtOverzicht.cshtml
+++ b/CarespotASP/Views/Vrijwilliger/OpdrachtOverzicht.cshtml
@@ -34,9 +34,7 @@
                     <td>@hulpvraag.Hulpbehoevende.Naam</td>
                     <td>@hulpvraag.CreateDatum</td>
                     <td>
-                        <form action="" method="GET">
-                            <button type="submit" class="btn btn-primary">Reageren</button>
-                        </form>
+                        <a href="/Vrijwilliger/Reageer/@hulpvraag.Id" class="btn btn-primary">Reageren</a>
                     </td>
                 </tr>
             }
