--- a/CarespotASP/Views/Vrijwilliger/Reageer.cshtml
+++ b/CarespotASP/Views/Vrijwilliger/Reageer.cshtml
@@ -4,15 +4,11 @@
 }
 
 <h2>Reageer</h2>
-
-<div class="form-group">
-    <label for="comment">Bericht:</label>
-    <textarea class="form-control" rows="5" id="comment"></textarea>
-</div>
-<button type="button" class="btn btn-primary">Verzend</button>
-
-
-@*Bericht = bericht;
-Datum = datum;
-VrijwilligerId = vrijwilligerId;
-HulpvraagId = hulpvraagId;*@
+<form action="/Vrijwilliger/CreateReactie" method="POST">
+    <div class="form-group">
+        <input type="hidden" name="id" value="@ViewBag.hulpvraagid">
+        <label for="comment">Bericht:</label>
+        <textarea name="bericht" class="form-control" rows="5" ></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Verzend</button>
+</form>
