--- a/CarespotASP/Views/Error/Index.cshtml
+++ b/CarespotASP/Views/Error/Index.cshtml
@@ -3,5 +3,24 @@
     ViewBag.Title = "ERROR";
 }
 
-<h2>ERROR</h2>
+<section id="error">
+    <div class="container">
+        <div class="row">
+            <div class="error">
+                <h2>ERROR</h2>
+                <div class="error-content">
+                <div class="col-md-2">
+                    <img src="../../Content/Foto/warning.png" class="img-responsive" alt="warning"/>
+                </div>
+                    <div class="col-md-10">
+                        <p>Er is iets misgegaan met het versturen van uw verzoek, controleer of u verbonden bent met de VPN.</p>
+                        <p>Controleer uw gegevens nogmaals.</p>
+                        <p>Verbind met de VPN en probeer het dan opnieuw.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
