--- a/CarespotASP/Views/Hulpverlener/Hulpverlener.cshtml
+++ b/CarespotASP/Views/Hulpverlener/Hulpverlener.cshtml
@@ -6,76 +6,70 @@
 }
 
 <h2>Hulpverlener</h2>
-<hr/>
-
+<hr />
+<div class="row">
+    <div class="col-md-12">
+        <a href="@Url.Action("RegistreerHulpverlener", "Registreer")" class="btn btn-success"> Toevoegen</a>
+    </div>
+</div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Hulpbehoevenden</h2>
-        
+
         <table class="table table-striped">
             <thead>
-            <tr>
-                <th>Naam</th>
-                <th>Email</th>
-                <th></th>
-            </tr>
+                <tr>
+                    <th>Naam</th>
+                    <th>Email</th>
+                    <th></th>
+                </tr>
             </thead>
             <tbody>
-  
-            @if (ViewBag.HulpBehoevenden != null)
+
+                @if (ViewBag.HulpBehoevenden != null)
             {
                 foreach (Hulpbehoevende h in ViewBag.HulpBehoevenden)
                 {
-                    <tr>
-                        <td>@h.Naam</td>
-                        <td>@h.Email</td>
-                        <td><a href="/Hulpverlener/Opdrachten/@h.Id" class="btn btn-info" role="button"><span class="glyphicon glyphicon-chevron-right"></span></a></td>
-                    </tr>
+                        <tr>
+                            <td>@h.Naam</td>
+                            <td>@h.Email</td>
+                            <td><a href="/Hulpverlener/Opdrachten/@h.Id" class="btn btn-info" role="button"><span class="glyphicon glyphicon-chevron-right"></span></a></td>
+                        </tr>
+                    }
                 }
-            }
-              
             </tbody>
         </table>
-       
     </div>
     <div class="col-md-8">
         <h2>Opdrachten</h2>
-        <br/>
-        <div class="col-md-12"> 
+        <br />
+        <div class="col-md-12">
             <table id="example" class="table table-striped table-bordered" width="100%" cellspacing="0">
                 <thead>
-                <tr>
-                    <th>Titel</th>
-                    <th>Geplaatst op</th>
-                    <th></th>
-                </tr>
+                    <tr>
+                        <th>Titel</th>
+                        <th>Geplaatst op</th>
+                        <th></th>
+                    </tr>
                 </thead>
-               <tbody>
-        @if (ViewBag.hulpvragen != null)
-        {
-            foreach (Hulpvraag hulpvraag in ViewBag.hulpvragen)
-             {
-                 <tr>
-                     <td>@hulpvraag.Titel</td>
-                     <td>@hulpvraag.CreateDatum</td>
-                     <td>
-                         
-                         <a class="btn btn-primary" href="/Hulpvraag/Details/@hulpvraag.Id">Open</a>
-                   
-                     </td>             
-                 </tr>
-             }
-        }
+                <tbody>
+                    @if (ViewBag.hulpvragen != null)
+                    {
+                        foreach (Hulpvraag hulpvraag in ViewBag.hulpvragen)
+                        {
+                            <tr>
+                                <td>@hulpvraag.Titel</td>
+                                <td>@hulpvraag.CreateDatum</td>
+                                <td>
+
+                                    <a class="btn btn-primary" href="/Hulpvraag/Details/@hulpvraag.Id">Open</a>
+                                </td>
+                            </tr>
+                        }
+                    }
                 </tbody>
             </table>
         </div>
-
     </div>
-
 </div>
-
-
-
-
-
