Accepteren/afwijzen reactie

--- a/CarespotASP/Views/Hulpbehoevende/Opdrachten.cshtml
+++ b/CarespotASP/Views/Hulpbehoevende/Opdrachten.cshtml
@@ -32,7 +32,7 @@
                     <td>@hulpvraag.Titel</td>
                     <td>@hulpvraag.CreateDatum</td>
                     <td>
-                        <form action="hulpbehoevende" method="GET">
+                        <form action="/hulpvraag/details/@hulpvraag.Id" method="GET">
                             <button type="submit" class="btn btn-primary">Open</button>
                         </form>
                     </td>
