--- a/CarespotASP/Views/Login/Keuze.cshtml
+++ b/CarespotASP/Views/Login/Keuze.cshtml
@@ -18,13 +18,13 @@
     @if (types.Contains(GebruikerType.Hulpbehoevende))
     {
         <div class="col-md-6">
-            <a href="#" class="btn btn-default btn-keuze pull-right">Hulpbehoevende</a>
+            <a href="/Login/KeuzeRedirect/Hulpbehoevende" class="btn btn-default btn-keuze pull-right">Hulpbehoevende</a>
         </div>  
     }
     @if (types.Contains(GebruikerType.Vrijwilliger))
     {
         <div class="col-md-6">
-            <a href="#" class="btn btn-default btn-keuze pull-right">Vrijwilliger</a>
+            <a href="/Login/KeuzeRedirect/Vrijwilliger" class="btn btn-default btn-keuze pull-right">Vrijwilliger</a>
         </div>  
     }
   
