gebruiker verwijderen, beheerder gebruikers verwijderen

--- a/CarespotASP/Views/Gebruiker/GegevensWijzigen.cshtml
+++ b/CarespotASP/Views/Gebruiker/GegevensWijzigen.cshtml
@@ -177,7 +177,7 @@
                 }
               
             }
-
+            <a href="@Url.Action("Delete", "Gebruiker", new {id = gebruiker.Id})" class="btn btn-danger">Verwijder</a>
           
 
         </div>
