--- a/CarespotASP/Views/Beheerder/Index.cshtml
+++ b/CarespotASP/Views/Beheerder/Index.cshtml
@@ -85,7 +85,7 @@
                         <td>@item.Naam</td>
                         <td>@item.GetType().Name</td>
                         <td>
-                            <button class="btn btn-danger" type="button">Verwijder</button>
+                            <a class="btn btn-danger" href="@Url.Action("Delete", "Gebruiker", new{id = item.Id})">Verwijder</a>
                         </td>
                     </tr>
                 }
