uitloggen, gegevens wijzigen menu

--- a/CarespotASP/Views/Error/AuthError.cshtml
+++ b/CarespotASP/Views/Error/AuthError.cshtml
@@ -13,8 +13,8 @@
                         <img src="../../Content/Foto/warning.png" class="img-responsive" alt="warning"/>
                     </div>
                     <div class="col-md-10">
-                        <p>U heeft geen recht voor deze pagina.</p>
-                        <p>Authenticatie failed.</p>                
+                        <p>U heeft geen rechten voor deze pagina.</p>
+                        <p>Authenticatie is mislukt.</p>                
                     </div>
                 </div>
             </div>
