--- a/CarespotASP/Content/Site.css
+++ b/CarespotASP/Content/Site.css
@@ -107,3 +107,19 @@ textarea {
     min-height: 100%;
     border-radius: 0;
 }
+
+.sec-nav {
+    float: right;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    padding-right: 15px;
+}
+
+.sec-nav > a > i {
+    color: #FFFFFF;
+    font-size: 20px;
+}
+
+.sec-nav > a > i:hover {
+    color: #008000
+}
