--- a/CarespotASP/Views/Chat/Index.cshtml
+++ b/CarespotASP/Views/Chat/Index.cshtml
@@ -29,7 +29,7 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4" style="height: 500px; overflow-y: scroll">
         <h2>Gebruikers</h2>
         <table class="table">
             <tr>
