--- a/CarespotASP/Views/Shared/_Layout.cshtml
+++ b/CarespotASP/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Carespot", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
+                @Html.ActionLink("Carespot", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
             
         @if (Session["LoggedInUser"] != null)
         {
