--- a/CarespotASP/Views/Gebruiker/Details.cshtml
+++ b/CarespotASP/Views/Gebruiker/Details.cshtml
@@ -11,7 +11,7 @@
     <div class="col-md-2"></div>
     <div class="col-md-8 center">
         <br />
-        <img src="http://www.verhuisgoedkoop.nu/wp-content/uploads/2016/04/holder.png" style="height: 200px"/>
+        <img src="@g.Image" style="height: 200px"/>
 
         <br/>
         <br/>
