--- a/CarespotASP/Content/Site.css
+++ b/CarespotASP/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-bottom: 20px;
     padding-top: 50px;
+    font-size: 18px;
 }
 
 /* Set padding to keep content from hitting the edges */
